c/examples/gcc/testsuite/c-c++-common/ubsan/sanitize-recover-2.c
/* { dg-do compile } */
/* { dg-options "-fsanitize-recover=return" } */

int i;

/* { dg-error ".-fsanitize-recover=return. is not supported" "" { target *-*-* } 0 } */
